First implementation of sentiments in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,3 +84,8 @@ services:
     depends_on:
       - elasticsearch
       - kafka01.internal-service
+  sentiments:
+    build: sentiments/target/docker/stage
+    depends_on:
+      - elasticsearch
+      - kafka01.internal-service
