--- a/feeder/supervisord.conf
+++ b/feeder/supervisord.conf
@@ -1,5 +1,5 @@
 [program:feeder]
-command=/opt/docker/bin/feeder
+command=/opt/docker/bin/feeder %(ENV_HASHTAG)s
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
