--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,11 @@ services:
     environment:
       - xpack.security.enabled=false
       - cluster.name=sentiments
+  kibana:
+    image: docker.elastic.co/kibana/kibana:6.2.4
+    environment:
+      SERVER_NAME: kibana
+      ELASTICSEARCH_URL: http://elasticsearch:9200
   kafka-connect:
     build: kafka-connect
     ports:
