--- a/feeder/src/universal/supervisor.conf
+++ b/feeder/src/universal/supervisor.conf
@@ -1,5 +1,5 @@
 [program:feeder]
-command=/opt/docker/bin/feeder %(ENV_HASHTAG)s
+command=/opt/docker/bin/feeder %(ENV_HASHTAG)s ThursdayThoughts
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
