updates for ojet:

--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -6,7 +6,11 @@ COPY src/ ./
 RUN mkdir settings
 COPY settings/ ./settings/
 
+# needs verification and merge of MyJetAp scaffold with src
 RUN npm install
+RUN npm install npm install oracle/ojet-cli 
+RUN	ojet create MyJETApp --template=basic
 
-EXPOSE 8080
-CMD ["node", "server.js"]
+
+EXPOSE 8000
+CMD ["node", "ojet serve"]
