--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,8 @@ services:
     environment:
       SERVER_NAME: kibana
       ELASTICSEARCH_URL: http://elasticsearch:9200
+    ports:
+        - "5601:5601"
   kafka-connect:
     build: kafka-connect
     ports:
@@ -100,7 +102,9 @@ services:
   feeder:
     build: feeder/target/docker/stage
     environment:
-      hashtag: "ThursdayThoughts"
+      HASHTAG: "FridayFeeling"
     depends_on:
       - elasticsearch
       - kafka01.internal-service
+      - kafka03.internal-service
+      - kafka02.internal-service
